--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- LINKS -->
-      <a id="profile-link" href="https://github.com/PatrickUgwuCoding" target="_blank">
+      <a id="profile-link" href="https://github.com/PatrickUgwu" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/GitHub_Invertocat_Logo.svg" alt="Github Logo">
     </a>
 
@@ -46,35 +46,35 @@
       <h2>Skills</h2>
       <div class="skills">
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python Logo">
           <p class="skill-name">Python</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" alt="Java Logo">
           <p class="skill-name">Java</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.svg">
+          <img class="skill-logo" src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.svg" alt="Git Logo">
           <p class="skill-name">Git</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://raw.githubusercontent.com/pallets/flask/refs/heads/main/docs/_static/shortcut-icon.png">
+          <img class="skill-logo" src="https://raw.githubusercontent.com/pallets/flask/refs/heads/main/docs/_static/shortcut-icon.png" alt="Flask Logo">
           <p class="skill-name">Flask</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg" alt="Angular Logo">
           <p class="skill-name">Angular</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/9/9e/UbuntuCoF.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/9/9e/UbuntuCoF.svg" alt="Ubuntu Logo">
           <p class="skill-name">Ubuntu</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/3/38/HTML5_Badge.svg" alt="HTML Logo">
           <p class="skill-name">HTML</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg">
+          <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/6/62/CSS3_logo.svg" alt="CSS Logo">
           <p class="skill-name">CSS</p>
         </div>
       </div>
@@ -85,16 +85,16 @@
       <h2>Projects</h2>
       <div class="project-tiles">
         
-        <a class="project-tile" href="https://github.com/PatrickUgwuCoding/Bachelorarbeit">
-          <img src="https://raw.githubusercontent.com/PatrickUgwuCoding/Bachelorarbeit/refs/heads/main/Thesis/figures/L%C3%B6sung%20xml.png" alt="Image of Project 1">
+        <a class="project-tile" href="https://github.com/PatrickUgwu/Bachelorarbeit" target="_blank">
+          <img src="https://raw.githubusercontent.com/PatrickUgwu/Bachelorarbeit/refs/heads/main/Thesis/figures/L%C3%B6sung%20xml.png" alt="Image of CollabSim">
           <p class="project-title">CollabSim</p>
-          <p class="project-description"><span class="tech-stack"> Tech Stack: Python, Flask, Angular, TypeScript, HTML, CSS, Ubuntu</span>A real-time simulation platform for swarm robotics, developed as part of my bachelor thesis, enabling collaborative interaction through a virtual environment.<span class="last-line">(click for more information)</span></p>
+          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Python, Flask, Angular, TypeScript, HTML, CSS, Ubuntu</span>A simulation platform for swarm robotics, developed as part of my bachelor thesis, enabling real-time collaborative interaction through a virtual environment.<span class="last-line">(click for more information)</span></p>
         </a>
 
-        <a class="project-tile" href="https://github.com/PatrickUgwuCoding/sudoku">
-          <img src="https://raw.githubusercontent.com/PatrickUgwuCoding/sudoku/refs/heads/main/sudoku_demo.gif" alt="Image of Project 1">
+        <a class="project-tile" href="https://github.com/PatrickUgwu/sudoku" target="_blank">
+          <img src="https://raw.githubusercontent.com/PatrickUgwu/sudoku/refs/heads/main/sudoku_demo.gif" alt="Image of Sudoku">
           <p class="project-title">Sudoku</p>
-          <p class="project-description"><span class="tech-stack"> Tech Stack: Python, MongoDB, bcrypt, pygame</span>Developed a simple version of Sudoku with user authentication as a learning project. <span class="last-line">(click for more information)</span></p>
+          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Python, MongoDB, bcrypt, pygame</span>Developed a simple version of Sudoku with user authentication as a learning project. <span class="last-line">(click for more information)</span></p>
         </a>
   
       </div>
