Add display of profile picture

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     
     <!-- WELCOME -->
     <section id="welcome-section">
+      <img class="profile-picture" src="cv_photo.jpg" alt="Location Icon">
       <h1>Patrick Ugwu</h1>
       <h3>Software Developer</h3>
       <p class="about-me">Robotics graduate with a focus on software development. Looking for an entry-level position as a Junior Software Developer.</p>
       <!-- LOCATION -->
       <div class="location" >
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Pin-location.png">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Pin-location.png" alt="Location Icon">
         <p>Berlin, Germany</p>
       </div>
 
