add Tic-Tac-Toe project

--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
         <a class="project-tile" href="https://github.com/PatrickUgwu/sudoku" target="_blank">
           <img src="https://raw.githubusercontent.com/PatrickUgwu/sudoku/refs/heads/main/sudoku_demo.gif" alt="Image of Sudoku">
           <p class="project-title">Sudoku</p>
-          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Python, MongoDB, bcrypt, pygame</span>Developed a simple version of Sudoku with user authentication as a learning project. <span class="last-line">(click for more information)</span></p>
+          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Python, MongoDB, bcrypt, Git, pygame</span>Developed a simple version of Sudoku with user authentication as a learning project.<span class="last-line">(click for more information)</span></p>
+        </a>
+
+        <a class="project-tile" href="https://github.com/PatrickUgwu/tic-tac-toe" target="_blank">
+          <img src="https://raw.githubusercontent.com/PatrickUgwu/tic-tac-toe/refs/heads/main/tic-tac-toe_demo.png" alt="Image of Tic Tac Toe">
+          <p class="project-title">Tic Tac Toe</p>
+          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Java, Git, Eclipse IDE, AWT (Java GUI toolkit)</span>A simple two-player Tic Tac Toe game built in Java to practice object-oriented programming and event-driven development.<span class="last-line">(click for more information)</span></p>
         </a>
   
       </div>
