--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section id="welcome-section">
       <img class="profile-picture" src="cv_photo.jpg" alt="Location Icon">
       <h1>Patrick Ugwu</h1>
-      <h3>Software Developer</h3>
-      <p class="about-me">Robotics graduate with a focus on software development. Looking for an entry-level position as a Junior Software Developer.</p>
+      <h3>Software Engineer</h3>
+      <p class="about-me">Robotics graduate with a focus on software development. Looking for an entry-level position as a Junior Software Engineer.</p>
       <!-- LOCATION -->
       <div class="location" >
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Pin-location.png" alt="Location Icon">
