Add Portfolio project

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
           <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>Python, MongoDB, bcrypt, Git, pygame</span>Developed a simple version of Sudoku with user authentication as a learning project.<span class="last-line">(click for more information)</span></p>
         </a>
 
+        <a class="project-tile" href="https://github.com/PatrickUgwu/portfolio" target="_blank">
+          <img src="https://raw.githubusercontent.com/PatrickUgwu/portfolio/refs/heads/main/portfolio_demo.jpg" alt="Image of Portfolio Website">
+          <p class="project-title">Portfolio</p>
+          <p class="project-description"><span class="tech-stack"><strong>Tech Stack: </strong>HTML, CSS</span>A minimalist portfolio website showcasing my development projects and skills.<span class="last-line">(click for more information)</span></p>
+        </a>
+
         <a class="project-tile" href="https://github.com/PatrickUgwu/tic-tac-toe" target="_blank">
           <img src="https://raw.githubusercontent.com/PatrickUgwu/tic-tac-toe/refs/heads/main/tic-tac-toe_demo.png" alt="Image of Tic Tac Toe">
           <p class="project-title">Tic Tac Toe</p>
