--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <p class="skill-name">Git</p>
         </div>
         <div class="skill">
-          <img class="skill-logo" src="https://raw.githubusercontent.com/pallets/flask/refs/heads/main/docs/_static/shortcut-icon.png" alt="Flask Logo">
-          <p class="skill-name">Flask</p>
+          <img class="skill-logo" src="https://raw.githubusercontent.com/fastapi/fastapi/refs/heads/master/docs/en/docs/img/favicon.png" alt="FastAPI Logo">
+          <p class="skill-name">FastAPI</p>
         </div>
         <div class="skill">
           <img class="skill-logo" src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg" alt="Angular Logo">
